@@ -1001,17 +1001,6 @@ The shell command
 .B "locale \-a"
 lists locales that are currently available.
 .TP
-.B GREP_OPTIONS
-This variable specifies default options
-to be placed in front of any explicit options.
-As this causes problems when writing portable scripts,
-this feature will be removed in a future release of
-.BR grep ,
-and
-.B grep
-warns if it is used.
-Please use an alias or script instead.
-.TP
 .B GREP_COLOR
 This variable specifies the color used to highlight matched (non-empty) text.
 It is deprecated in favor of
