@@ -21,7 +21,6 @@ fi
 vars_='
 GREP_COLOR
 GREP_COLORS
-GREP_OPTIONS
 TERM
 '
 envvar_check_fail=0
